Add Migration Listener

--- a/protocol-definitions/Client.yaml
+++ b/protocol-definitions/Client.yaml
@@ -775,3 +775,111 @@ methods:
       partitionIdentifier: -1
     response:
       {}
+  - id: 17
+    name: addMigrationListener
+    since: 2.1
+    doc: |
+      Adds a Migration listener to the cluster.
+    request:
+      retryable: false
+      partitionIdentifier: -1
+      params:
+        - name: localOnly
+          type: boolean
+          nullable: false
+          since: 2.1
+          doc: |
+            if true only node that has the migration sends the request, if false
+            sends all partition lost events.
+    response:
+      params:
+        - name: response
+          type: UUID
+          nullable: false
+          since: 2.1
+          doc: |
+            The listener registration id.
+    events:
+      - name: Migration
+        since: 2.1
+        params:
+          - name: migrationState
+            type: MigrationState
+            nullable: false
+            since: 2.1
+            doc: |
+              Migration state.
+          - name: partitionId
+            type: int
+            nullable: false
+            since: 2.1
+            doc: |
+              The id assigned during the listener registration.
+      - name: ReplicaMigration
+        since: 2.1
+        params:
+          - name: migrationState
+            type: MigrationState
+            nullable: false
+            since: 2.1
+            doc: |
+              The progress information of the overall migration.
+          - name: partitionId
+            type: int
+            nullable: false
+            since: 2.1
+            doc: |
+              The partition ID that the event is dispatched for.
+          - name: replicaIndex
+            type: int
+            nullable: false
+            since: 2.1
+            doc: |
+              The index of the partition replica.
+          - name: sourceUuid
+            type: UUID
+            nullable: true
+            since: 2.1
+            doc: |
+              The id of old owner of the migrating partition replica.
+          - name: destUuid
+            type: UUID
+            nullable: true
+            since: 2.1
+            doc: |
+              The id of new owner of the migrating partition replica.
+          - name: success
+            type: boolean
+            nullable: false
+            since: 2.1
+            doc: |
+              The result of the migration: completed or failed.
+          - name: elapsedTime
+            type: long
+            nullable: false
+            since: 2.1
+            doc: |
+              The elapsed the time of this migration in milliseconds.
+  - id: 18
+    name: removeMigrationListener
+    since: 2.1
+    doc: |
+      Removes a Migration listener to the cluster.
+    request:
+      retryable: true
+      partitionIdentifier: -1
+      params:
+        - name: registrationId
+          type: UUID
+          nullable: false
+          since: 2.1
+          doc: |
+            The id assigned during the listener registration.
+    response:
+      params:
+        - name: response
+          type: boolean
+          nullable: false
+          since: 2.1
+          doc: |
+            true if the listener existed and removed, false otherwise.
